--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "core-js": "^2.6.5",
+    "postcss-pxtorem": "^4.0.1",
     "vant": "^2.0.9",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
